gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ab-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ab-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - ab-gateway
  http:
    - route:
      - destination:
          host: hello-server
          subset: v1
          port:
            number: 50051
        weight: 90
      - destination:
          host: hello-server
          subset: v2
          port:
            number: 50051
        weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grpc-api
spec:
  host: hello-server
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
